hphp/test/slow/call_static/bad_cls_type.php.expectf

Fatal error: Cls: Expected string or object, got int in %s on line 6
